# Gecode_counting_base_search

./: .gitignore  AllDiffCBS.cpp  AllDiffCBS.h  CBSBrancher.cpp  CBSBrancher.h  CBSConstraint.hpp  CBSPosValChoice.hpp  CMakeLists.txt  FindGecode.cmake  README.md  ValToVar.cpp  ValToVar.h  call_grind.sh  main.cpp  mem_check.sh  utils.hpp
problems/: DummyProblem.cpp  Sudoku.cpp
